Fix blog images getting stretched

--- a/main/src/framework/text/rich-text.component.scss
+++ b/main/src/framework/text/rich-text.component.scss
@@ -90,9 +90,9 @@
 
         img {
             display: block;
-            border-radius: var(--border-radius);
-            border: shapes.$border;
             max-width: 100%;
+            height: auto;
+            object-fit: contain;
         }
 
         figcaption {
